--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -9,10 +9,10 @@
     <%= product.description %>
   </p>
   <footer class="actions">
-    <%= button_to add_item_cart_path(product_id: product.id), class: 'btn btn-primary' , method: :post do %>
-      <%= fa_icon "shopping-cart", text: 'Add' %>
+    <%= button_to add_item_cart_path(product_id: product.id), class: "btn btn-primary", method: :post do %>
+      <%= fa_icon "shopping-cart", text: "Add" %>
     <% end %>
-    <%= link_to product, class: 'btn btn-default pull-right' do %>
+    <%= link_to product, class: "btn btn-default pull-right" do %>
       Details &raquo;
     <% end %>
   </footer>
@@ -20,4 +20,10 @@
   <aside class="price">
     <%= humanized_money_with_symbol product.price %>
   </aside>
+
+  <% if product.quantity == 0 %>
+    <aside class="soldout">
+      Sold Out
+    </aside>
+  <% end %>
 </article>
