--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,9 +1,9 @@
 <section class="cart-show">
   <% if enhanced_cart.empty? %>
-  <div class="alert alert-danger">
-  <h1>Your cart is empty. Ready to fill it?</h1>
-  <h3><%= link_to "Click here", "/products"%></h3>
-  </div>
+
+  <h1>Your cart is empty. Ready to shop?</h1>
+  <button type="button" class="btn btn-light btn-lg btn-block"><%= link_to "Click here", "/products"%></button>
+
   <% else %>
   <header class="page-header">
     <h1>My Cart</h1>
