--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,4 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<h1>Here is your products summary:</h1>
+<hr>
+<p>Total Products: <%= @products %> </p>
+<p>Total Categories: <%= @categories %> </p> 
