--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -43,6 +43,22 @@
           </ul>
         </li>
         <li>
+          <% if current_user %>
+            <a href="#">Signed in as <%= current_user.name %></a>
+        </li>
+        <li>
+            <%= link_to "Logout", '/logout' %>
+        </li>
+          <% else %>
+          <li>
+            <%= link_to 'Login', '/login' %>
+          </li>
+          <li>
+            <%= link_to 'Signup', '/signup' %>
+          </li>
+          <% end %>
+        </li>
+        <li>
           <%= link_to cart_path do %>
             <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
           <% end %>
